@@ -11,6 +11,7 @@ Change Log:
 - Fix: Plugins that use custom URL rewriting are working now (e.g. NextGen Gallery)
 - Fix: PopUps can be edited even on servers with memcache/similar caching extensions.
 - Fix: Resolve "Strict Standards" notes in PHP 5.4
+- Fix: Rule "Not internal link" now works correctly when opening page directly.
 - Better: Forms inside PopUps will only refresh the PopUp and not reload the page.
 - Better: Detection of theme compatibility for loading method "Page Footer" improved.
 
